--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="section steps-section">
             <h2>Passo a Passo</h2>
             <div id="step-display" class="step-display">
-                <img id="step-image" class="step-image" src="./image" alt="" onerror="this.style.display='none'">
+                <img id="step-image" class="step-image" src="" alt="">
                 <p id="step-text" class="step-text"></p>
                 <div class="step-controls">
                     <div id="timer-display" class="timer-display">
