--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="section steps-section">
             <h2>Passo a Passo</h2>
             <div id="step-display" class="step-display">
-                <img id="step-image" class="step-image" src="https://placehold.co/600x400/png?text=Passo+Atual" alt="">
+                <img id="step-image" class="step-image" src="./image/1.png" alt="">
                 <p id="step-text" class="step-text"></p>
                 <div class="step-controls">
                     <div id="timer-display" class="timer-display">
